--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,19 +5,28 @@
     <title>Auto-Reload on Content Change</title>
 </head>
 
-<body>
-    <h1>Waiting for voila.ipynb in input 1...</h1>
-    <p>If voilà doesn't load after connecting input 1, reload the Service UI</p>
+<body style="background-color:#252525;color:white">
+        <h1> Waiting for Jupyter notebook... </h1>
+        <p>Add a voila.ipynb file in input 1. </br></br> If voila.ipynb is not rendered after connecting input 1, reload the Service UI</p>
+        <img src="https://raw.githubusercontent.com/ITISFoundation/osparc-services/3e7c9cf09c551f03058410e056177e963005efac/services/dy-dash/cc-rabbit-2d/src/cc-rabbit-2d/static/Loading.gif" />
+    
     <script>
+        const searchToken = "PCEtLSB2b2lsYSBzcGlubmVyIC0tPg==";
         function getContent() {
             fetch('/') // Replace with your actual GET request URL
-                .then(response => response.text())
+                .then(response => {
+                    console.log(response)
+                    if (response.status === 200) {
+                        return response.text()
+                    }
+                    throw Error('Bad response')
+                })
                 .then(data => {
                     const hidden_element = document.getElementById('content');
                     if (hidden_element) {
                         const hidden_content = hidden_element.textContent;
 
-                        if (!data.includes(hidden_content) && data.includes(atob("dm9pbGE="))) {
+                        if (!data.includes(hidden_content) && data.includes(atob(searchToken))) {
                             console.log('Content changed. Reloading the page...');
                             location.reload();
                         }
@@ -28,11 +37,12 @@
                 .catch(error => console.error('Error fetching content:', error));
         }
 
-        // Check for updates every 0.5 seconds
-        const intervalTime = 2000;
-        setInterval(getContent, intervalTime);
+        // going lowre will cause multipel kernesl to be started
+        const checkInteervalMS = 2000;
+        setInterval(getContent, checkInteervalMS);
     </script>
     <div id="content" , style="display: none;">{{unique_tracking_token}}</div>
+    
 </body>
 
 </html>
