Addressed PR comments

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -37,7 +37,7 @@
                 .catch(error => console.error('Error fetching content:', error));
         }
 
-        // going lowre will cause multipel kernesl to be started
+        // going lower will cause multiple kernels to be started
         const checkInteervalMS = 2000;
         setInterval(getContent, checkInteervalMS);
     </script>
